--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                 </div>
             </div>
             <div class="row">
+                <h3>Une petite comparaison entre deux pays, veuillez choisir 2 pays et l'option de comparaison:</h3> 
+            </div>
+            <div class="row">
                 <div class="col-5">
                         <select id = "select2" class="form-control basic">
                         </select>
