--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="row">
-                <h3>Une petite comparaison entre deux pays, veuillez choisir 2 pays et l'option de comparaison:</h3> 
+                <center><h4>Une petite comparaison entre deux pays, veuillez choisir 2 pays et l'option de comparaison:</h4></center> 
             </div>
             <div class="row">
                 <div class="col-5">
