--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <center><h4>Une petite comparaison entre deux pays, veuillez choisir 2 pays et l'option de comparaison:yes</h4></center> 
+            <div class="row central">
+                <center><h4>Une petite comparaison entre deux pays, veuillez choisir 2 pays et l'option de comparaison:</h4></center> 
             </div>
             <div class="row">
                 <div class="col-5">
