--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </div>
             <div class="row central">
-                <center><h4>Une petite comparaison entre deux pays, veuillez choisir 2 pays et l'option de comparaison:</h4></center> 
+                <center><h4>Une petite comparaison entre deux pays, veuillez choisir 2 pays et l'option de comparaison avant de valider:</h4></center> 
             </div>
             <div class="row">
                 <div class="col-5">
